--- a/index.html
+++ b/index.html
@@ -124,52 +124,52 @@
             <div class="row">
                 <div class="col-lg-6 p-0">
                     <div class="categories__item categories__large__item set-bg"
-                    data-setbg="img/categories/category-1.jpg">
-                    <div class="categories__text">
+                    data-setbg="img/categories/108/redbird.jpeg" title="Bed Sheets" >
+                   <!--  <div class="categories__text">
                        <!--  <h1>Women’s fashion</h1>
                         <p>Sitamet, consectetur adipiscing elit, sed do eiusmod tempor incidid-unt labore
                         edolore magna aliquapendisse ultrices gravida.</p> -->
-                        <a href="#" style="color:black"><h4><b>Shop now</b></h4></a>
-                    </div>
+                      <!--  <a href="#" style="color:black"><h4><b>Shop now</b></h4></a>
+                    </div> -->
                 </div>
             </div>
             <div class="col-lg-6">
                 <div class="row">
                     <div class="col-lg-6 col-md-6 col-sm-6 p-0">
-                        <div class="categories__item set-bg" data-setbg="img/categories/category-2.jpg">
-                            <div class="categories__text">
-                                <!-- <h4>Men’s fashion</h4>
+                        <div class="categories__item set-bg" data-setbg="img/categories/cushion/cushion1.jpeg" title="Cushion Covers"> 
+                            <!--   <div class="categories__text">
+                              <h4>Men’s fashion</h4>
                                 <p>358 items</p>
-                                -->
+                              
 								 <a href="#" style="color:black"><h4><b>Shop now</b></h4></a>
-                            </div>
+                            </div>  -->
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 p-0">
-                        <div class="categories__item set-bg" data-setbg="img/categories/category-3.jpg">
-                            <div class="categories__text">
-<!--                                 <h4>Kid’s fashion</h4>
+                        <div class="categories__item set-bg" data-setbg="img/categories/gaddi/Orange.png" title="Pouffe Cushions">
+                         <!--     <div class="categories__text">
+                               <h4>Kid’s fashion</h4>
                                 <p>273 items</p>
- -->                                <a href="#" style="color:black"><h4><b>Shop now</b></h4></a>
-                            </div>
+                           <a href="#" style="color:black"><h4><b>Shop now</b></h4></a>
+                            </div> -->     
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 p-0">
-                        <div class="categories__item set-bg" data-setbg="img/categories/category-4.jpg">
-                            <div class="categories__text">
-                                <!-- <h4>Cosmetics</h4>
-                                <p>159 items</p> -->
+                        <div class="categories__item set-bg" data-setbg="img/categories/Blanket/Picture1.png" title="Dohar">
+                           <!--  <div class="categories__text">
+                                <h4>Cosmetics</h4>
+                                <p>159 items</p> 
                                <a href="#" style="color:black"><h4><b>Shop now</b></h4></a>
-                            </div>
+                            </div>-->
                         </div>
                     </div>
                     <div class="col-lg-6 col-md-6 col-sm-6 p-0">
-                        <div class="categories__item set-bg" data-setbg="img/categories/category-5.jpg">
-                            <div class="categories__text">
-                             <!--    <h4>Accessories</h4>
-                                <p>792 items</p> -->
+                        <div class="categories__item set-bg" data-setbg="img/categories/Blanket/Blanketblue.jpeg" title="Jaipuri Rajai">
+                           <!--     <div class="categories__text">
+                             <h4>Accessories</h4>
+                                <p>792 items</p>
                                 <a href="#" style="color:black"><h4><b>Shop now</b></h4></a>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -185,7 +185,7 @@
         <div class="row">
             <div class="col-lg-4 col-md-4">
                 <div class="section-title">
-                    <h4>New product</h4>
+                    <h4>Best Deals</h4>
                 </div>
             </div>
             <div class="col-lg-8 col-md-8">
@@ -390,23 +390,23 @@
     <div class="container">
         <div class="row">
             <div class="col-xl-7 col-lg-8 m-auto">
-                <div class="banner__slider owl-carousel">
-                    <div class="banner__item">
-                        <div class="banner__text">
+                <div class="banner__slider owl-carousel" >
+                    <div class="banner__item"  >
+                        <div class="banner__text set-bg"  data-setbg="img/product/product-8.jpg">
                             <span>The Chloe Collection</span>
                             <h1>The Project Jacket</h1>
                             <a href="#">Shop now</a>
                         </div>
                     </div>
                     <div class="banner__item">
-                        <div class="banner__text">
+                        <div class="banner__text set-bg"  data-setbg="img/categories/category-5.jpg">
                             <span>The Chloe Collection</span>
                             <h1>The Project Jacket</h1>
                             <a href="#">Shop now</a>
                         </div>
                     </div>
                     <div class="banner__item">
-                        <div class="banner__text">
+                        <div class="banner__text set-bg"  data-setbg="img/categories/category-5.jpg">
                             <span>The Chloe Collection</span>
                             <h1>The Project Jacket</h1>
                             <a href="#">Shop now</a>
