--- a/index.html
+++ b/index.html
@@ -540,7 +540,7 @@
                     </div>
                     <div class="trend__item">
                         <div class="trend__item__pic">
-                            <img src="img/trend/f-1.jpg" alt="">
+                            <img src="img/trend/f-1.JPG" alt="">
                         </div>
                         <div class="trend__item__text">
                             <h6></h6>
@@ -556,7 +556,7 @@
                     </div>
                     <div class="trend__item">
                         <div class="trend__item__pic">
-                            <img src="img/trend/f-2.jpg" alt="">
+                            <img src="img/trend/f-2.JPG" alt="">
                         </div>
                         <div class="trend__item__text">
                             <h6></h6>
@@ -572,7 +572,7 @@
                     </div>
                     <div class="trend__item">
                         <div class="trend__item__pic">
-                            <img src="img/trend/f-3.jpg" alt="">
+                            <img src="img/trend/f-3.JPG" alt="">
                         </div>
                         <div class="trend__item__text">
                             <h6></h6>
