--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mix women men kid accessories cosmetic">
                 <div class="product__item sale">
-                    <div class="product__item__pic set-bg" data-setbg="img/product/product-6.JPG">
+                    <div class="product__item__pic set-bg" data-setbg="img/product/product-6.jpg">
                         <div class="label sale">Sale</div>
                         <ul class="product__hover">
                             <li><a href="img/product/product-6.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
