--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
             </div>
             <div class="col-lg-3 col-md-4 col-sm-6 mix men">
                 <div class="product__item">
-                    <div class="product__item__pic set-bg" data-setbg="img/product/product-118.JPG">
+                    <div class="product__item__pic set-bg" data-setbg="img/product/product-118.jpg">
                         <ul class="product__hover">
                             <li><a href="img/product/product-2.jpg" class="image-popup"><span class="arrow_expand"></span></a></li>
                             <li><a href="#"><span class="icon_heart_alt"></span></a></li>
