--- a/index.html
+++ b/index.html
@@ -599,7 +599,7 @@
         <div class="row">
             <div class="col-lg-6 p-0">
                 <div class="discount__pic">
-                    <img src="img/discount.JPG" alt="">
+                    <img src="img/discount.jpg" alt="">
                 </div>
             </div>
             <div class="col-lg-6 p-0">
